--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 .pantalla{
-    width: 80rem;
-    height: 170rem;
+    width: 428px;
+    height: 926px;
     background-color: whitesmoke;
     margin:auto;
     margin-top: 10rem;
@@ -9,52 +9,54 @@
 }
 .menu{
     float:left;
-    width: 78rem;
-    height: 10rem;
-    margin-top: 10rem;
+    width: 41rem;
+    height: 6rem;
+    margin-top: 4rem;
     margin-left: 1rem;
     justify-content: space-between;
 }
 .img1{
-    width: 8rem;
+    width: 4rem;
     margin-top: 1rem;
-    margin-left: 4rem;
+    margin-left: 1.5rem;
 }
 .img2{
-    width: 8rem;
-    margin-left:54rem;
+    width: 4rem;
+    margin-left:30rem;
     margin-top: 1rem;
 }
 .titulo{
     float: left;
-    width: 70rem;
-    height: 15rem;
-    font-size: 2.5rem;
+    width: 41rem;
+    height: 7rem;
+    font-size: 1.5rem;
+    margin-left: 2.5rem;
 }
 .titulos{
-    margin-top: 6rem;
-    margin-left: 3rem;
+    margin-top: 2rem;
+    margin-left: -0.4rem;
 }
 .buscar{
 float: left;
-width: 60rem;
-height: 8rem;
-margin-left: 2rem;
+width: 32rem;
+height: 4rem;
+margin-left: 2.5rem;
 background: whitesmoke;
 box-shadow: 5px 4px 10px;
 border-radius: 1rem;
-font-size: 2.5rem;
-padding: 1.7rem;
+font-size: 1.5rem;
+padding: 1.2rem;
 text-align: left;
 color: rgb(133, 130, 130);
 cursor:text;
 }
 .lupa{
     float: right;
-    width: 10rem;
-    height: 8rem;
-    margin-right: 2rem;
+    width: 5.5rem;
+    height: 3.5rem;
+    margin-right:-2.3rem;
     cursor:pointer ;
+    margin-top: 0.3rem;
 }
 .img3{
    width: 110%;
@@ -63,25 +65,28 @@ cursor:text;
 }
 .contenedor{
     float: left;
-    width: 80rem;
-    height: 30rem;
+    width: 41rem;
+    height: 10rem;
+    margin-left: 1rem;
     padding: 8rem;
     display: flex;
-    justify-content: space-around;    
+    justify-content: space-around;  
+        
 }
 .imagenes{
-    width: 18rem;
+    width: 9rem;
     margin-left: 1rem;
-    margin-top: -1.5rem;
+    margin-top: -3rem;
     cursor: pointer;
 }
 .tabla{
-    width: 78rem;
+    width: 41rem;
     height:5rem;
     margin: auto;
-    margin-left: 3rem;
+    margin-left: 1.3rem;
     text-align: center;
-    font-size: 1.7rem;
+    font-size: 1rem;
+    margin-top: -1rem;
     font-weight: 900;
 }
 .tabla td :hover{
@@ -90,63 +95,65 @@ cursor:text;
     cursor: pointer;
 }
 .imagen_grande{
-    width: 60rem;
-    margin-top: 7rem;
-    margin-left: 10.5rem;
+    width: 33rem;
+    margin-top: 3rem;
+    margin-left: 5.3rem;
 }
 .letras_imagen{
     background-color: red;
-    width:56.5rem;
-    height: 10rem;
+    width:31rem;
+    height: 9.83rem;
     margin: auto;
-    margin-top: -14rem;
-    margin-left: 11.4rem;
-    border-radius: 3rem;
+    margin-top: -12rem;
+    margin-left: 6rem;
+    border-radius: 1rem;
     background: linear-gradient(180deg, rgba(0 0, 0, 0) 20.98%, #000000 100%);
     position: relative;
     color: whitesmoke;
 }
 .titulo_imagen{
     float: left;
-    font-size: 4rem;
-    margin-top: -5rem;
+    font-size: 1.5rem;
+    margin-top: 1rem;
     margin-left: 3rem;
 }
 .final{
-    width: 78rem;
+    width: 41rem;
     height: 10rem;
     margin: auto;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    margin-top: -2rem;
 }
 .zona{
+    font-size: 1.3rem;
     float: left;
     color: white;
-    margin-left: 14rem;
-    margin-top: -7rem;
+    margin-left: 9.2rem;
+    margin-top: -6rem;
     position: absolute;
 }
 .item2{
-    width: 8rem;
+    width: 2rem;
     height: 8rem;
     margin-top: 5rem;
     cursor: pointer;
     font-size: 3rem;
 }   
 .img{
-    width: 6rem;
+    width: 2.8rem;
     float: left;
     position: absolute;
-    margin-left: 58rem;
-    margin-top: -6rem;
+    margin-left: 31.8rem;
+    margin-top: -5rem;
 }
 .item2 :hover{
     transition: 0.5s;
     filter: grayscale(300%) opacity(0.4) drop-shadow( 0 0 0 hsl(25, 100%, 55%));
 }
 .imagenes2{
-    width: 4.5rem;
+    width: 2.5rem;
 }
 .imagen_link{
     float: left;
@@ -169,7 +176,7 @@ cursor:text;
     background-color: whitesmoke;
 }
 .titulo2{
-    font-size: 4rem;
+    font-size: 3.5rem;
     font-weight: 700;
     position: absolute;
     margin-top: 97rem;
@@ -179,70 +186,89 @@ cursor:text;
     position: absolute;
     margin-top: 106rem;
     margin-left: 6rem;
-    font-size: 3rem;
+    font-size: 2rem;
     font-weight: 100;
     color: #828282;
 }
 .titulo4{
-    position: absolute;
-    margin-top: 98.5rem;
-    margin-left: 65rem;
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-weight: 100;
     color: #828282;
 }
-.titulo5{
+.titulo_4{
     position: absolute;
-    margin-top: 105.7rem;
-    margin-left: 62.8rem;
-    font-size: 4rem;
+ width: 10rem;
+ height: 2rem;
+ margin-left: 62rem;
+ margin-top: 98.46rem;   
+ text-align: right;
+}   
+.titulo5{
+  
+
     color: #FF7A1A;;
+    
 }
 .titulo5 b{
     color: black;
 }
+.titulo_5{
+    font-size: 1.3rem;
+    width: 8rem;
+    height: 3rem;
+    margin-left: 64rem;
+    margin-top: 106.4rem;
+    position: absolute;
+    text-align: right;
+}
 .texto{
+    width: 68rem;
+    height: 18rem;
     position: absolute;
     margin-top: 115rem;
     margin-left: 5rem;
-    font-size: 2.5rem;
+    font-size: 2.3rem;
     color: #828282;
-}
+    }
 .cuadros{
     position: absolute;
     width: 78.2rem;
     height: 15rem;
     margin-top: 135rem;
-    margin-left: 0.99rem;
+    margin-left: 0.65rem;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
 }
 .item4{
-    width: 11rem;
-    height: 11rem;
-    margin-top: 2.5rem;
+    width: 9rem;
+    height: 9rem;
+    margin-top: 2rem;
     background-color: white;
     border-radius: 1rem;
     box-shadow: 5px 4px 10px rgba(0, 0, 0, 0.15);
     text-align: center;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-weight: 600;
+}
+.item4 h1{
+    font-size: 1.6rem;
+    margin-top: 1.7rem;
 }
 .cuadro_final{
     position: absolute;
     background-color: #FF7A1A;
     color: white;
     border-radius: 2%;
-    width: 75rem;
-    height: 10rem;
-    margin-left: 2.4rem;
-    margin-top: 155rem;
+    width: 68rem;
+    height: 8rem;
+    margin-left: 6rem;
+    margin-top: 150rem;
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
 .titulo_final{
-    margin-top: 3rem;
+    margin-top:1.7rem;
     font-size: 3rem;
 }
